Changed CSS to use flexbox to work  with scaleable screens. Components now are visually seamless. Table no longer overflows and is now  in its container with x and y scrollbars. Bug currently exists with screens below a certain size.

--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,30 @@
+body {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar {
+    height: 100%;
+}
+
+.container{height: 100%;}
+
+#menu-bar {
+    height: 0;
+    overflow: hidden;
+    flex: 1 1 7%;
+    /*border: 5px solid red;*/
+}
+
+#dashbboard {
+    height: 0;
+    flex: 1 1 93%;
+    /*border: 5px solid green;*/
+}
+
 .goodValue {
     text-align: center;
 }
