--- a/app/side-nav/side.component.css
+++ b/app/side-nav/side.component.css
@@ -13,10 +13,17 @@
 
 #wrapper {
     padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+}
+
+#wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /*border: 4px solid rebeccapurple;*/
 }
 
 #wrapper.toggled {
@@ -25,27 +32,31 @@
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
+    position: relative;
     left: 250px;
     width: 0;
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
     background: white;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    /* Closing animation */
+    -webkit-transition: all 2s ease;
+    -moz-transition: all 2s ease;
+    -o-transition: all 2s ease;
+    transition: all 2s ease;
 }
 
+
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 100%;
 }
 
 #page-content-wrapper {
-    width: 100%;
     position: absolute;
-    padding: 15px;
+    flex: 5 1 auto;
+    width: 0;
+    /*border: 5px dotted blue;*/
+    overflow: auto;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -111,7 +122,7 @@
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 250px;
+        /* padding-left: 250px;*/
     }
 
     #wrapper.toggled {
@@ -119,15 +130,18 @@
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 100%;
+        /* Opening Transision */
+        transition: all 0.1s ease;
     }
 
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
+        /* Closing Transition */
+        transition: all 2s ease;
     }
 
     #page-content-wrapper {
-        padding: 20px;
         position: relative;
     }
 
